k8s/apps/speakstats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speakstats
  namespace: matflixlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: speakstats.matflixlab.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speakstats
            port:
              number: 3000
